--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,23 @@ body {
   background-color: #f0d9da;
   font-family: "Montserrat", sans-serif;
 }
+
+a {
+  color: #a374d5;
+}
+.weatherAppCity {
+  margin: 0;
+  font-size: 38px;
+  line-height: 48px;
+}
+.weatherAppDetails {
+  font-size: 16px;
+  line-height: 24px;
+  color: rgba(39, 33, 66, 0.4);
+}
+.weatherAppDetails strong {
+  font-weight: 500px;
+}
 .weatherApp {
   background: #f9ecec;
   max-width: 600px;
@@ -9,4 +26,54 @@ body {
   box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
   border-radius: 16px;
   padding: 30px;
+}
+
+.searchFormInput {
+  background-color: #f0d9da;
+  border: none;
+  border-radius: 6px;
+  width: 80%;
+  font-size: 16px;
+  padding: 15px 20px;
+}
+.searchFormButton {
+  background: #f0d9da;
+  padding: 15px 20px;
+  border: none;
+  border-radius: 6px;
+  color: black;
+  margin-left: 5px;
+  font-size: 16px;
+}
+.weather-app-data {
+  display: flex;
+  justify-content: space-between;
+}
+main {
+  padding: 30px;
+}
+
+.weatherAppTemperatureContainer {
+  display: flex;
+}
+.weaterAppTemperature {
+  font-size: 88px;
+  font-weight: light;
+  margin-left: 10px;
+}
+
+.weatherAppIcon {
+  font-size: 44px;
+  margin-top: 22px;
+}
+.weatherAppUnit {
+  margin-top: 16px;
+  font-size: 28px;
+}
+footer {
+  border-top: 1px solid, #f0d9da;
+  padding: 30px 0 0 0;
+  text-align: center;
+  font-size: 12px;
+  color: rgba(0, 0, 0, 0.6);
 }
