--- a/src/index.css
+++ b/src/index.css
@@ -70,6 +70,35 @@ main {
   margin-top: 16px;
   font-size: 28px;
 }
+.weatherForecast {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 30px;
+}
+.weatherForecastDate {
+  text-align: center;
+  color: rgba(39, 33, 66, 0.4);
+  font-size: 16px;
+  line-height: 20px;
+  margin-bottom: 10px;
+}
+.weatherForecasteTemperature {
+  text-align: center;
+  color: #f65282;
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+}
+
+.weatherForecasteTemperatureMin {
+  opacity: 0.5;
+}
+.weather-forecast-icon {
+  width: 88px;
+  height: 88px;
+  display: block;
+  margin: 0 auto;
+}
 footer {
   border-top: 1px solid, #f0d9da;
   padding: 30px 0 0 0;
